MAJ SEO balise plusieurs vue

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Contact
 {% endblock %}
 
 {% block body %}
@@ -27,14 +27,14 @@
 			</div>
 
 			{# -----header mobile ---------- #}
-			<div class="main-container">
+			<main class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
-					<div class="content-wrapper-header">
+					<section class="content-wrapper-header">
 						<h1>Formulaire de contact
 						</h1>
-					</div>
+					</section>
 					<div class="row form-group">
 						<div class="col-md-6 mb-3 mb-md-0">
 						
@@ -88,7 +88,7 @@
 					</div>
 				</div>
 
-			</div>
+			</main>
 
 			{# contactet par mail ou téléphone  #}
 
