--- a/templates/navleft/presentations/monhistoire.html.twig
+++ b/templates/navleft/presentations/monhistoire.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Mon histoire
 {% endblock %}
 
 {% block body %}
@@ -32,10 +32,10 @@
 
 			{# -----header mobile ---------- #}
 
-			<div class="main-container ">
+			<mmain class="main-container ">
 				{% include "partials/headermobile.html.twig" %}
 
-				<div class="content-wrapper m-4 rounded">
+				<section class="content-wrapper m-4 rounded">
 					<h1 class="text-centers ide-title">Pour tout savoir sur son chauffeur</h1>
 					<p>
 						Avant de trouver le succès avec Uber, Travis Kalanick, un entrepreneur américain (originaire de Los Angeles, et étudiant à l’UCLA), a essuyé 2 échecs colossaux avec 2 précédentes startups : Scour et RedSwoosh, 2 sociétés de peer-to-peer file sharing (système de partage de fichiers pair à pair comme eMule, BitTorrent, Napster).
@@ -63,8 +63,8 @@
 						La prochaine fois, je prendrais l’histoire d’un Français qui a réussi aux USA. 😉 Vous ne le savez peut-être pas, mais il y en a ! Venus aux USA pour accomplir leur rêve américain, certains ont réussi.
 					</p>
 
-				</div>
-			</div>
+				</section>
+			</mmain>
 			<div class="overlay-app"></div>
 		</div>
 
