--- a/templates/navleft/services/personne.html.twig
+++ b/templates/navleft/services/personne.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}8 personnes
 {% endblock %}
 
 {% block body %}
@@ -27,7 +27,7 @@
 			</div>
 
 			{# -----header mobile ---------- #}
-			<div class="main-container">
+			<main class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
@@ -55,7 +55,7 @@
 					</div>
 
 
-					<div
+					<section
 						class="content-section">
 						{# <div class="content-section-title">Apps in your plan</div> #}
 						<div class="content-wrapper m-4 rounded">
@@ -68,9 +68,9 @@
 
 						</div>
 
-					</div>
+					</section>
 				</div>
-			</div>
+			</main>
 		</div>
 	</div>
 	<div class="overlay-app"></div>
