--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -23,7 +23,7 @@
 				{% include "partials/navleft.html.twig" %}
 			</div>
 			</div>
-			<div class="main-container">
+			<main class="main-container">
 			{% include "partials/headermobile.html.twig" %}
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
@@ -53,7 +53,7 @@
 					</div>
 
 				</div>
-			</div>
+			</main>
 		</div>
 		<div class="overlay-app"></div>
 	</div>
