--- a/templates/order/new.html.twig
+++ b/templates/order/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Nouvelle commande
 {% endblock %}
 
 {% block body %}
@@ -27,7 +27,7 @@
 			</div>
 
 			{# -----header mobile ---------- #}
-			<div class="main-container">
+			<main class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
@@ -43,7 +43,7 @@
 
 
 				</div>
-			</div>
+			</main>
 
 			<div class="overlay-app"></div>
 		</div>
