--- a/templates/navleft/presentations/monhistoire.html.twig
+++ b/templates/navleft/presentations/monhistoire.html.twig
@@ -32,7 +32,7 @@
 
 			{# -----header mobile ---------- #}
 
-			<mmain class="main-container ">
+			<main class="main-container ">
 				{% include "partials/headermobile.html.twig" %}
 
 				<section class="content-wrapper m-4 rounded">
@@ -64,7 +64,7 @@
 					</p>
 
 				</section>
-			</mmain>
+			</main>
 			<div class="overlay-app"></div>
 		</div>
 
