--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Visite
 {% endblock %}
 
 {% block body %}
@@ -27,11 +27,12 @@
 			</div>
 
 			{# -----header mobile ---------- #}
-			<div class="main-container">
+			<main class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
 					<h1 class="text-center">VISITE EXCLUSIVE DES VIGNOBLES BORDELAIS</h1>
+					{# -----carousel---------- #}
 					<div class="bd-example">
 						<div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
 							<ol class="carousel-indicators">
@@ -53,10 +54,9 @@
 
 					<h2 class="text-center py-3 animate__backInRight animate__animated ">Visitez sereinement !</h2>
 
-					{# -----carousel---------- #}
 
 
-					<div
+					<section
 						class="content-section">
 						{# <div class="content-section-title">Apps in your plan</div> #}
 						<div class="apps-card">
@@ -116,9 +116,9 @@
 
 
 						</div>
-					</div>
+					</section>
 				</div>
-			</div>
+			</main>
 		</div>
 		<div class="overlay-app"></div>
 	</div>
