--- a/templates/navleft/services/aeroport_gare.html.twig
+++ b/templates/navleft/services/aeroport_gare.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Aéroport & gars
 {% endblock %}
 
 {% block body %}
@@ -31,7 +31,7 @@
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
-					<div class="content-wrapper-header">
+					<section class="content-wrapper-header">
 						<h3 class="img-content text-center container animate__animated animate__rotateInDownRight">
 							👉 Votre VTC Izy Drive permet, à bord de ses transports alternatifs avec un prix fixé à l'avance de vous accompagner en gares, aux aérogares, et dans tous les manifestations ou conférences professionnelles.
 							<br>
@@ -44,9 +44,9 @@
 							</button> #}
 						</div>
 						{# <img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt=""> #}
-					</div>
+					</section>
 
-					<div class="content-section">
+					<section class="content-section">
 
 						<div class="apps-card">
 							<div class="app-card text-center h-100">
@@ -84,7 +84,7 @@
 								</div><hr>
 							</div>
 						</div>
-					</div>
+					</section>
 				</div>
 			</main>
 		</div>
