+Modifications titres de pages =>SEO

--- a/templates/navleft/services/disposition.html.twig
+++ b/templates/navleft/services/disposition.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mise à disposition
+{% block title %}Services mise à disposition
 {% endblock %}
 
 {% block body %}
