--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Visite
+{% block title %}Page visiteurs et les visites 
 {% endblock %}
 
 {% block body %}
