--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}réinitialisation du mot de passe
+{% block title %}Réinitialisation du mot de passe
 {% endblock %}
 
 {% block body %}
