--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -42,9 +42,9 @@
         </tbody>
     </table>
 <img width="50px" height="50px"  class="content-wrapper-img rounded-circle" src="{{ user.image }}" alt="image de profile">
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a href="{{ path('app_user_index') }}">Retour vers la liste</a>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+    <a href="{{ path('app_user_edit', {'id': user.id}) }}">Modifier</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
