--- a/templates/navleft/legales/apropos.html.twig
+++ b/templates/navleft/legales/apropos.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Page de mon histoire | Chauffeur IzyDrive 
 {% endblock %}
 
 {% block body %}
