--- a/templates/navleft/legales/conditionsgenerales.html.twig
+++ b/templates/navleft/legales/conditionsgenerales.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Page des conditions générales
 {% endblock %}
 
 {% block body %}
