--- a/templates/navleft/presentations/avis.html.twig
+++ b/templates/navleft/presentations/avis.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Page des avis 
 {% endblock %}
 
 {% block body %}
