--- a/templates/order/edit.html.twig
+++ b/templates/order/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Order{% endblock %}
+{% block title %}Page de modification de commandes {% endblock %}
 
 {% block body %}
     <h1>Edit Order</h1>
