--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -64,7 +64,7 @@
 								
 								<div><input type="checkbox" name="_remember_me">
 									Remember me
-									<a style="margin-left:40px" class="" href="{{ path('app_forgot_password_request') }}">
+									<a class="text-decoration-none text-warning" href="{{ path('app_forgot_password_request') }}">
 										Mot de passe oublié
 									</a>
 									</div>
