--- a/templates/navleft/legales/mentionslegales.html.twig
+++ b/templates/navleft/legales/mentionslegales.html.twig
@@ -47,12 +47,12 @@
 																												</ul>
 																																													</div> #}
 					<div class="content-section">
-						<div class="content-section-title">Mentions légales</div>
+						<h1 class="content-section-title">Mentions légales</h1>
 						<div class="apps-card">
 							<div class="app-card h-100 w-100">
-								<span>
+								<h3>
 									Propriétaire et éditeur du contenu
-								</span>
+								</h3>
 								<div class="app-card__subtext">
 									<p>Directeur de la publication : Emmanuel Marc
 											RCS : Strasbourg 802 335 547 SISE
