+div modifie en h1
div modifie en h1

--- a/templates/navleft/legales/conditionsgenerales.html.twig
+++ b/templates/navleft/legales/conditionsgenerales.html.twig
@@ -149,12 +149,12 @@
 																</ul>
 															</div> #}
 					<div class="content-section">
-						<div class="content-section-title">Condictions generales</div>
+						<h1 class="content-section-title">Condictions generales</h1>
 						<div class="apps-card ">
 			<div class="app-card h-100 w-100">
-								<span>
+								<h3>
 									IZY DRIVE DANS VOTRE VILLE
-								</span>
+								</h3>
 								<div class="app-card__subtext">PRÉSENTATION
 
 Transport 13 Elegant.com est un service de transport, société par actions simplifiée unipersonnelle au capital 1500€, dont le siège social est au 37 bd Ferdinand Negro 13012 Marseille, France, immatriculée au Registre du commerce et des sociétés de Marseille sous le numéro 820982874 (ci-après la « Société »). Numéro de TVA intracommunautaire : FR 03820982874. La Société fournit un service de déplacement en véhicule de tourisme avec chauffeur fonctionnant exclusivement sur réservation, immédiate ou à l'avance..<br>
