+retrait  des h-100 , class card unifier sur toute les vues
Peut être réa dapter et utiliser des media queries pour les break point  pour plus adapter les card

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -31,11 +31,11 @@
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
-					<section class="content-wrapper-header">
+					<section class="content-wrapper-header justify-content-center">
 						<h1>Formulaire de contact
 						</h1>
 					</section>
-					<div class="row form-group">
+					<div class="row form-group mt-2">
 						<div class="col-md-6 mb-3 mb-md-0">
 						
 							{{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
