--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -84,7 +84,7 @@
 					<section class="content-section">
 						{# <div class="content-section-title">Apps in your plan</div> #}
 						<div class="apps-card">
-							<article class="app-card h-100">
+							<article class="app-card ">
 								<span>
 									Un tarif connu à l’avance et sans surprise à l’arrivée
 								</span>
@@ -96,7 +96,7 @@
 								</div>
 							</article>
 
-							<article class="app-card h-100">
+							<article class="app-card ">
 								<span>
 									Facilité de paiement
 								</span>
@@ -109,7 +109,7 @@
 								</div>
 							</article>
 
-							<article class="app-card h-100">
+							<article class="app-card">
 								<span>
 									Accessible 24h/24 et 7 jours/7
 								</span>
