--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -43,7 +43,7 @@
 					<section class="content-section">
 						<div class="content-section-title">Notre flotte de vehicule</div>
 						<div class="apps-card">
-							<div class="app-card h-100">
+							<div class="app-card ">
 								<span>
 									MODERNE
 								</span>
@@ -55,7 +55,7 @@
 
 								</div>
 							</div>
-							<div class="app-card h-100">
+							<div class="app-card ">
 								<span>
 									COVID 19 ET LES AUTRES
 								</span>
@@ -70,7 +70,7 @@
 								</div>
 							</div>
 
-							<div class="app-card h-100">
+							<div class="app-card ">
 								<span>
 									ÉQUIPEMENT
 								</span>
