--- a/templates/navleft/services/aeroport_gare.html.twig
+++ b/templates/navleft/services/aeroport_gare.html.twig
@@ -49,7 +49,7 @@
 					<div class="content-section">
 
 						<div class="apps-card">
-							<div class="app-card text-center h-100">
+							<div class="app-card text-center ">
 								<span>
 									<h3 class="animate__flip">En ville
 									</h3>
@@ -62,7 +62,7 @@
 
 								</div><hr>
 							</div>
-							<div class="app-card text-center h-100">
+							<div class="app-card text-center ">
 								<span>
 									<h3 class="animate__flip">Dans les gares
 									</h3>
@@ -72,7 +72,7 @@
 								</div>
 							</div>
 
-							<div class="app-card text-center h-100">
+							<div class="app-card text-center ">
 								<span>
 									<h3 class="animate__flip">Aéroports
 									</h3>
