--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -60,7 +60,7 @@
 						class="content-section">
 						{# <div class="content-section-title">Apps in your plan</div> #}
 						<div class="apps-card">
-							<article class="app-card h-100">
+							<article class="app-card ">
 								<span>
 									ARCACHON MARGAUX
 								</span>
@@ -77,7 +77,7 @@
 									</button>
 								</div>
 							</article>
-							<article class="app-card h-100">
+							<article class="app-card ">
 								<span>
 									SAINT-EMILION DÉJEUNER AU CHÂTEAU
 								</span>
@@ -95,7 +95,7 @@
 									</button>
 								</div>
 							</article>
-							<article class="app-card h-100">
+							<article class="app-card ">
 								<span>
 									MÉDOC 1855
 								</span>
