--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -2,7 +2,7 @@
 <header class="header">
 	{# <div class="menu-circle"></div> #}
 	<a href="{{path('home_page')}}">
-	<img class="desk h-100" src="{{asset('assets/images/logo.png')}}" alt="logo izy drive"></a>
+	<img class="desk " src="{{asset('assets/images/logo.png')}}" alt="logo izy drive"></a>
 	<a class="menuSelector mob text-white">
 		<i class="fas fa-bars"></i>
 		<i class="fas fa-times"></i>
