--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -900,11 +900,11 @@ body.light-mode .video-bg:before {
 
 .apps-card {
   align-items: flex-start;
-  text-justify: auto;
   .app-card{
-    min-height: 300px;
-    margin-top: auto;
-   
+    min-height: 510px;
+    display:flex;
+    flex-direction:column;
+
  }
 }
 
