+bouton page visite : ajout class text-decoration-none text-white

--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -73,7 +73,7 @@
 								6/7 personnes : 540 €
 								<div class="app-card-buttons ">
 									<button class="content-button status-button">
-										<a href="{{path('app_order_new')}}">Réserver</a>
+										<a class="text-decoratio-none text-white" href="{{path('app_order_new')}}">Réserver</a>
 									</button>
 								</div>
 							</article>
@@ -91,7 +91,7 @@
 								6/7 personnes : 540 €
 								<div class="app-card-buttons">
 									<button class="content-button status-button">
-										<a href="{{path('app_order_new')}}">Réserver</a>
+										<a class="text-decoration-none text-white" href="{{path('app_order_new')}}">Réserver</a>
 									</button>
 								</div>
 							</article>
@@ -109,7 +109,7 @@
 								6/7 personnes : 540 €
 								<div class="app-card-buttons">
 									<button class="content-button status-button">
-										<a href="{{path('app_order_new')}}">Réserver</a>
+										<a class="text-decoration-none text-white" href="{{path('app_order_new')}}">Réserver</a>
 									</button>
 								</div>
 							</article>
