+Maj titres avec la classe side-title

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -36,7 +36,8 @@
 
 							
 						{{ville}} à {{temperature}}°C
-						<p>{{  }} </p>
+						{# {{deg}} #}
+						<p>{{ feel_like}}</p>
 							<p>Ciel {{weather}} et {{ description}}</p>
 							<p>Avec un vent allant de {{vent }}km/h</p>
 							<br>
