--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -31,7 +31,7 @@
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
-					<h1 class="text-center">VISITE EXCLUSIVE DES VIGNOBLES BORDELAIS</h1>
+					<h1 class="text-center side-title">VISITE EXCLUSIVE DES VIGNOBLES BORDELAIS</h1>
 					{# -----carousel---------- #}
 					<div class="bd-example">
 						<div id="carouselExampleCaptions" class="carousel slide pointer-event" data-ride="carousel">
