+Ajout repeatpasswordtype et modification form register plaintpassword en password

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -45,7 +45,7 @@
 					{{ form_row(registrationForm.adresse,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.age,  {'attr':{'class':'form form-control'}}) }}
 
-					{{ form_row(registrationForm.plainPassword,   {'attr':{'class':'form form-control'}})
+					{{ form_row(registrationForm.password,   {'attr':{'class':'form form-control'}})
 													        }}
 
 					<button type="submit" class="btn btn-success btn-block p-2 my-5">S'inscrire</button>
