+MAJ : feel_like out

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -37,7 +37,7 @@
 							
 						{{ville}} à {{temperature}}°C
 						{# {{deg}} #}
-						<p>{{ feel_like}}</p>
+						{# <p>{{ feel_like}}</p> #}
 							<p>Ciel {{weather}} et {{ description}}</p>
 							<p>Avec un vent allant de {{vent }}km/h</p>
 							<br>
