--- a/templates/partials/navleft.html.twig
+++ b/templates/partials/navleft.html.twig
@@ -33,7 +33,7 @@
 					<div class="side-title">Légal</div>
 					<div class="side-menu">
 					<a href="{{ path('mentionslegales') }}">
-							Mentions légals
+							Mentions légales
 						</a>
 						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
 						<a href="{{ path('apropos') }}">
