--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -37,7 +37,7 @@
 					</section>
 					<div class="row form-group mt-2">
 						<div class="col-md-6 mb-3 mb-md-0">
-						
+							{{ form_start(form)}}
 							{{form_row(form.firstName, {'attr':{ 'class': 'form-control'}})}}
 						</div>
 						<div class="col-md-6">
@@ -65,6 +65,8 @@
 							<input type="submit" class="btn btn-primary btn-block" value="Envoyer">
 
 						</div>
+
+							{{ form_end(form)}}
 					</div>
 					<div
 						class="p-4 mb-3  my-5">
