MAJ SEO + couleur texte blanc/noir mode nuit/jour

--- a/templates/navleft/services/disposition.html.twig
+++ b/templates/navleft/services/disposition.html.twig
@@ -41,12 +41,11 @@
 						<i class="fas fa-car"></i>
 					</p>
 					<p>Nos chauffeurs, parlant anglais et connaissant bien Paris (ainsi que toutes ses adresses prestigieuses) pourront vous conseiller selon vos envies et vos besoins. Ils font preuve d’une grande discrétion garantissant votre tranquillité et la confidentialité de tous vos déplacements. Possédant un permis spécialisé dans le transport de personnes et une philosophie de la Grande Remise, ils seront capables de s’adapter à toutes situations.
-																		
-																		Notre parc de véhicules est composé de Berlines et de Vans pour répondre à toutes vos attentes.</p>
+Notre parc de véhicules est composé de Berlines et de Vans pour répondre à toutes vos attentes.</p>
 
 				</section>
 			</main>
-			<div class="overlay-app"></div>
+			{# <div class="overlay-app"></div> #}
 		</div>
 	</div>
 {% endblock %}
