--- a/templates/navleft/services/visite.html.twig
+++ b/templates/navleft/services/visite.html.twig
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 
-					<h2 class="text-center py-3 animate__backInRight animate__animated ">Visitez sereinement !</h2>
+					<h2 class="text-center py-3 animate__backInRight animate__animated side-title">Visitez sereinement !</h2>
 
 
 
