MAJ ajustement general balise SEO + petit details

--- a/templates/navleft/presentations/monhistoire.html.twig
+++ b/templates/navleft/presentations/monhistoire.html.twig
@@ -35,8 +35,8 @@
 			<main class="main-container ">
 				{% include "partials/headermobile.html.twig" %}
 
-				<section class="content-wrapper m-4 rounded">
-					<h1 class="text-centers ide-title">Pour tout savoir sur son chauffeur</h1>
+				<article class="content-wrapper m-4 rounded">
+					<h1 class="text-center side-title">Pour tout savoir sur son chauffeur</h1>
 					<p>
 						Avant de trouver le succès avec Uber, Travis Kalanick, un entrepreneur américain (originaire de Los Angeles, et étudiant à l’UCLA), a essuyé 2 échecs colossaux avec 2 précédentes startups : Scour et RedSwoosh, 2 sociétés de peer-to-peer file sharing (système de partage de fichiers pair à pair comme eMule, BitTorrent, Napster).
 						
@@ -63,7 +63,7 @@
 						La prochaine fois, je prendrais l’histoire d’un Français qui a réussi aux USA. 😉 Vous ne le savez peut-être pas, mais il y en a ! Venus aux USA pour accomplir leur rêve américain, certains ont réussi.
 					</p>
 
-				</section>
+				</article>
 			</main>
 			<div class="overlay-app"></div>
 		</div>
