MAJ ajustement general SEO + CSS

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -35,11 +35,11 @@
 						<div class="content-wrapper-context">
 
 							
-						{{ville}} à {{temperature}}°C
+						<div class="content-text">{{ville}} à {{temperature}}°C</div>
 						{# {{deg}} #}
 						{# <p>{{ feel_like}}</p> #}
-							<p>Ciel {{weather}} et {{ description}}</p>
-							<p>Avec un vent allant de {{vent }}km/h</p>
+							<div class="content-text">Ciel {{weather}} et {{ description}}</div>
+							<div class="content-text">Avec un vent allant de {{vent }}km/h</div>
 							<br>
 							<h1 class="img-content">
 								Votre chauffeur privé
@@ -56,7 +56,7 @@
 
 						<img class="content-wrapper-img desk  w-75" min-heigth="150px" src="{{asset('assets/images/chauffeurvtc.png')}}" alt="">
 					</section>
-					<h2 class="text-center py-3 animate__backInRight animate__animated ">Disponible 24/24h 7/7j</h2>
+					<h2 class="text-center py-3 animate__backInRight animate__animated side-title">Disponible 24/24h 7/7j</h2>
 
 					{# -----carousel---------- #}
 					<div class="bd-example">
