--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -30,17 +30,17 @@
 						<div class="content-wrapper-context">
 							
 								<div>
-									<p>Email :
+									<p class="content-text">Email :
 										{{ app.user.email }}</p>
-									<p>Prénom :
+									<p class="content-text">Prénom :
 										{{ app.user.firstname }}</p>
-									<p>Nom :
+									<p class="content-text">Nom :
 										{{ app.user.lastname }}</p>
 								</div>
 								<div>
-									<p>Adresse :
+									<p class="content-text">Adresse :
 										{{ app.user.adresse }}</p>
-									<p>Age :
+									<p class="content-text">Age :
 										{{ app.user.age }}</p>
 								</div>
 							
