--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -38,7 +38,7 @@
 
 					{# formulaire inscription  #}
 {{ form_start(registrationForm) }}
-			{{ form_row(registrationForm.firstname,  {'attr':{'class':'form form-control'}}) }}
+			{{ form_row(registrationForm.firstname,  {'attr':{'class':'form form-control'},}) }}
 					{{ form_row(registrationForm.lastname,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.email,  {'attr':{'class':'form form-control'}}) }}
 					{{ form_row(registrationForm.image,  {'attr':{'class':'form form-control'}}) }}
