--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -69,9 +69,8 @@
 
 							{{ form_end(form)}}
 					</div>
-					<div
-						class="p-4 mb-3  my-5">
 						{# on affiche les données de contact crée dans le service yam  #}
+					<div class="mb-3 my-5">
 						<div class="border  text-center text-white">
 							<p class="mb-0 font-weight-bold">Addresse</p>
 							<p class="mb-4">{{ contact_adress }}</p>
