+MAJ formulaire password reset

--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -6,8 +6,8 @@
 {% block body %}
 	<div class="container text-black bg-white ">
 		<p>
-			Si un compte correspondant à votre adresse e-mail existe, un e-mail vient d'être envoyé contenant un lien que vous pouvez utiliser pour réinitialiser votre mot de passe.
-			{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
+			Si un compte correspondant à votre adresse e-mail valide, vous recevrez un mail contenant un lien que vous pouvez utiliser pour réinitialiser votre mot de passe. Ce lien expirera
+			{{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }} après réception.
 		</p>
 		<p>Si vous ne recevez pas d'e-mail, veuillez vérifier votre dossier spam ou les couriers indésirables.<br>
 			<a class="btn btn-info bold p-3 my-2 btn-block my-3 "  href="{{ path('app_forgot_password_request') }}">Merci de refaire la saisie pour recevoir le lien.
